--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,49 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-a {
-  color: inherit;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: wheat;
+  color: #333;
+}
+
+a{
   text-decoration: none;
+  color: #333;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h1,h2,h3{
+  font-weight: bold;
 }
+
+.header{
+  background-color: aqua;
+  color: gold;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header.logo{
+  font-size: 20px;
+  color: azure;
+}
+
+.header nav{
+  display: flex;
+  gap: 40px;
+}
+
+footer{
+  background-color:aqua;
+  color: green;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
